# fine_tune_lora_kd_gptqmodel_4bit

./: .env  README.md  main.py  pyproject.toml
data/: models_list.json
data/source_data/: distillation_data.jsonl  evaluation_qa.json  instruction_5000.jsonl  raw_chinese_data.jsonl  similar_longtext_dialogues_chatml.jsonl
data_clean/: automated_analysis.py  cleaning_filter_chinese_dataset_offline.py  cleaning_instruction.py  cleaning_instruction_merge_jsonl.py  cleaning_medfile.py  cleaning_remove_similar_longtext_dialogues.py
docker/: Dockerfile  requirements.txt
download_models/: download_filter_models.py  download_models.py
gptq_model/: deploy_vllm.py  evaluate_ppl.py  fake_qat_pre.py  gptqmodel_quant.py  joint_kd_lora.py  knowledge_distill.py  lora_qat_train.py  monitor.py  run_all_evaluate.py  train_all_evaluation.py
